--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,45 @@
 .sp-style{
   font-family: 'Times New Roman', Times, serif;
 }
+/* My Profle  */
+.profile-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  text-align: center;
+  margin-right: 10%;
+  margin-left: 20%;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+.profile-card button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: rgb(52, 37, 77);
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.profile-card a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+.profile-card button:hover,
+.profile-card a:hover {
+  opacity: 0.7;
+}
 .serv-head{
   font-weight: bold;
   font-family: 'Times New Roman', Times, serif;
