--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ top: 14%;
 .nav-btn:hover::before {
   height: 100%;
   width: 100%;
-  border: 2px solid #ED1C24;
+  border: 2px solid #05818A;
   border-right: none;
   border-bottom: none;
 }
@@ -111,12 +111,12 @@ color: var(--secondery);
 .nav-btn:hover::after {
   height: 100%;
   width: 100%;
-  border: 2px solid #ED1C24;
+  border: 2px solid #05818A;
   border-left: none;
   border-top: none;
 }
 .active{
-  color: rgb(55, 6, 231) !important;
+  color: #11adb8;
 }
 
 
